# LibNT

./: CMakeList.txt  CMakeLists.txt  LICENSE  LICENSE.txt  LibMIABuildTreeSettings.cmake.in  LibMIAConfig.cmake.in  LibMIAConfigVersion.cmake.in  README.txt  index.html  libmia_doxygen.in  params.json
example/: CMakeLists.txt  README.txt  main.cpp
src/: CMakeLists.txt  MIAConfig.h.in
src/MATLAB/: CMakeLists.txt
src/MATLAB/@DeltaLattice/: DeltaLattice.m  mtimes.m  sparse_times.m
src/MATLAB/@DeltaMIA/: DeltaMIA.m  mtimes.m
src/MATLAB/@DeltaNT/: DeltaNT.m
src/MATLAB/@DenseNT/: DenseNT.m  assign.m  assign_expr.m  compare.m  do_minus.m  do_plus.m  eq.m  error_check_flatten.m  error_check_plus.m  exp.m  make_cell_indices.m  make_expr.m  mrdivide.m  mtimes.m  sqrt.m  toLattice.m
src/MATLAB/@Lattice/: Lattice.m  compare.m  minus.m  mldivide.m  mtimes.m  plus.m  toMIA.m
src/MATLAB/@MIA/: MIA.m  assign.m  assign_expr.m  back_solve.asv  check_flatten_idx.m  compare.m  do_minus.m  do_plus.m  error_check_merge.m  error_check_mldivide.m  error_check_mult.m  error_check_plus.m  exp.m  flatten.m  make_cell_indices.m  make_expr.m  minus.m  mldivide.m  mrdivide.m  mtimes.m  multinomial_solve.m  plus.m  sqrt.m  toLattice.m
src/MATLAB/@MIAExpr/: MIAExpr.m  error_check_mldivide.m  error_check_mult.m  minus.m  mldivide.m  mtimes.m  not.m  plus.m  pull_indices.m  pull_merge_indices.m  pull_mult_indices.m
src/MATLAB/@NTExpr/: NTExpr.m  error_check_merge.m  error_check_mult.m  minus.m  mldivide.asv  mldivide.m  mtimes.m  not.m  plus.m  pull_merge_indices.m  pull_mult_indices.asv  pull_mult_indices.m  sparse_times_polyalgorithm.m
src/MATLAB/@SparseLattice/: SparseLattice.m  binary_setup.m  chkbinary.m  compare.m  ctranspose.m  fuzzy_eq.m  intersect.asv  intersect.m  merge_list.asv  merge_list.m  minus.m  mldivide.m  mtimes.m  multiply.asv  old_mtimes.m  plus.m  sort.m  specialized_mult.m  toMIA.m  transpose.asv  transpose.m  ubinary.asv  union.m
src/MATLAB/@SparseMIA/: SparseMIA.m  assign.m  changeLexOrder.m  compare.m  consolidate_indices.m  do_merge.m  do_minus.m  do_plus.m  eq.m  extract_indices.m  flatten.m  fuzzy_eq.m  mtimes.m  perform_merge.m  permute.m  plus.m  pull_index.m  sort.m  toLattice.m  union.m
src/MATLAB/@SparseNT/: SparseNT.m  assign.m  check_selection_args.m  compare.m  concat.m  delete.m  do_merge.asv  do_merge.m  do_minus.m  do_plus.m  eq.m  flatten.m  permute.m  pull_index.m  select_subNT.m  sort.m  toLattice.m
src/MATLAB/mex/: CMakeLists.txt  MatlabTools.cmake  check_sparse.cpp  check_sparse.h  denselattice_mul.cpp  denselattice_mul.def  denselattice_solve.cpp  denselattice_solve.def  sparse_change_linIdx.cpp  sparse_denselattice_mul.cpp  sparse_denselattice_solve.cpp  sparse_merge.cpp  sparse_permute.cpp  sparse_sort.cpp  sparselattice_merge.cpp  sparselattice_merge.def  sparselattice_mul.cpp  sparselattice_mul.def  sparselattice_solve.cpp  sparselattice_solve.def
src/MATLAB/tests/: runLibMIAMATLABTests.m
src/MATLAB/tests/Lattice/: dense_lattice_mult_test.m  dense_lattice_mult_test_work.m  dense_lattice_solve_test.m  dense_lattice_solve_test_work.m
src/MATLAB/tests/MIA/: dense_mia_assign_test.m  dense_mia_assign_test_work.m  dense_mia_merge_test.m  dense_mia_merge_test_work.m  dense_mia_mult_test.m  dense_mia_mult_test_work.asv  dense_mia_mult_test_work.m  dense_mia_solve_test.m  dense_mia_solve_test_work.m
src/MATLAB/tests/SparseLattice/: sparse_dense_lattice_mult_test.m  sparse_dense_lattice_mult_test_work.m  sparse_lattice_merge_test.m  sparse_lattice_merge_test_work.m  sparse_lattice_mult_test.m  sparse_lattice_mult_test_work.m  sparse_lattice_solve_test.m  sparse_lattice_solve_test_work.m
src/MATLAB/tests/SparseMIA/: sparse_mia_assign_test.m  sparse_mia_assign_test_work.m  sparse_mia_changelinIdx_test.m  sparse_mia_changelinIdx_test_work.m  sparse_mia_merge_test.m  sparse_mia_merge_test_work.asv  sparse_mia_merge_test_work.m  sparse_mia_mult_test.m  sparse_mia_mult_test_work.m  sparse_mia_permute_test.m  sparse_mia_permute_test_work.m  sparse_mia_solve_test.m  (+3 more)
src/multi_index_array/: CMakeLists.txt  DenseLattice.h  DenseLatticeBase.h  DenseMIA.h  DenseMIABase.h  ExprUtil.h  FunctionUtil.h  ImplicitMIA.h  Index.h  IndexUtil.h  Lattice.h  LatticeException.h  LibMIAAlgorithm.h  LibMIAException.h  LibMIAHelpers.h  LibMIARadix.h  LibMIARanges.h  LibMIATimSort.h  LibMIAUtil.h  MIA.h  MIA_Expr.h  MappedDenseLattice.h  MappedSparseLattice.h  Packer.h  PermuteIterator.h  README.txt  SparseLattice.h  SparseLatticeBase.h  SparseMIA.h  SparseMIABase.h  UniqueLabel.h  Util.h  libdivide.h  tupleit.hh
src/multi_index_array/kennytm/: traits.hpp  vtmp.hpp
src/tests/: CMakeLists.txt
src/tests/DenseLattice/: CMakeLists.txt  denselatticemulttests.cpp
src/tests/DenseMIA/: CMakeLists.txt  dense_mia_add_subtract_test.cpp  dense_mia_functions.cpp  dense_mia_mult_test.cpp  dense_mia_solve_test.cpp
src/tests/ImplicitMIA/: CMakeLists.txt  implicit_mia_block_functions.cpp  implicit_mia_functions.cpp
src/tests/Lattice/: CMakeLists.txt  lattice1.cpp  latticeconstrtests.cpp  latticemulttests.cpp  mixed_lattice_solve_test.cpp  mixedlatticemulttests.cpp
src/tests/MIA/: CMakeList.txt  CMakeLists.txt  dense_mia_test.cpp  mia_assign_test.cpp  mia_constr_test.cpp  mia_unary_test.cpp  mixed_mia_assign_test.cpp  mixed_mia_merge_test.cpp  mixed_mia_mult_test.cpp  mixed_mia_solve_test.cpp  mixed_mia_solve_test.hpp  mixed_mia_solve_test_double.cpp  mixed_mia_solve_test_float.cpp  other_function.cpp
src/tests/SparseLattice/: CMakeLists.txt  mapped_test.cpp  slattice_1.cpp  slattice_test.h  sparse_lattice_functions.cpp  sparse_lattice_mult_test.cpp  sparse_lattice_mult_test_specialized.cpp  sparse_lattice_solve_test.cpp  sparse_lattice_solve_test.hpp  sparse_lattice_solve_test_double.cpp  sparse_lattice_solve_test_float.cpp
src/tests/SparseMIA/: CMakeLists.txt  sparse_mia_add_sub_tests.cpp  sparse_mia_assign_test.cpp  sparse_mia_compare_test.cpp  sparse_mia_functions.cpp  sparse_mia_mult_test.cpp  sparse_mia_solve_test.cpp
superlu/: CMakeLists.txt  README.txt
(+3 files in other folders)
